cabal-version: 2.4
name:          quantile-charts
version:       0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/quantile-charts#readme
bug-reports: https://github.com/tonyday567/quantile-charts/issues
build-type: Simple
tested-with: GHC == 8.10.4
source-repository head
  type: git
  location: https://github.com/tonyday567/quantile-charts

common common-options
  build-depends:
    base >=4.7 && <5
  default-language:
    Haskell2010

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie

library
  import: common-options
  import: ghc-options-stanza
  hs-source-dirs:
    src
  default-extensions:
  build-depends:
    chart-svg ^>= 0.3,
    optics-core,
    text,
    unordered-containers,
  exposed-modules:
    Chart.Quantile
